# svg4mpl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: example_01.py
src/svg4mpl/: __init__.py  svgutil.py
src/svg4mpl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_svgutil.py
